tree-sitter-logscale/test/corpus/filters.txt
================================================================================
Free text pattern (identifier)
================================================================================

error

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (free_text_pattern
        (identifier)))))

================================================================================
Quoted free text pattern
================================================================================

"connection timeout"

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (free_text_pattern
        (quoted_string)))))

================================================================================
Field equality comparison
================================================================================

status = 200

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (equality_pattern
          (anchored_pattern
            (number)))))))

================================================================================
Field inequality comparison
================================================================================

status != error

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (equality_pattern
          (anchored_pattern
            (identifier)))))))

================================================================================
Numeric less-than comparison
================================================================================

status < 400

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (number)))))

================================================================================
OR filter
================================================================================

error OR warning

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (or_filter
        (free_text_pattern
          (identifier))
        (free_text_pattern
          (identifier))))))

================================================================================
AND filter (implicit)
================================================================================

error warning

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (and_filter
        (free_text_pattern
          (identifier))
        (free_text_pattern
          (identifier))))))

================================================================================
AND filter (explicit)
================================================================================

error AND warning

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (and_filter
        (free_text_pattern
          (identifier))
        (free_text_pattern
          (identifier))))))

================================================================================
NOT filter
================================================================================

NOT error

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (not_filter
        (free_text_pattern
          (identifier))))))

================================================================================
Parenthesized filter
================================================================================

(error OR warning) AND critical

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (and_filter
        (parenthesized_filter
          (filter
            (or_filter
              (free_text_pattern
                (identifier))
              (free_text_pattern
                (identifier)))))
        (free_text_pattern
          (identifier))))))

================================================================================
Boolean literal true
================================================================================

true

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (true_literal))))

================================================================================
Boolean literal false
================================================================================

false

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (false_literal))))

================================================================================
Like filter
================================================================================

host like server*

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (like_pattern
          (unquoted_pattern))))))

================================================================================
Field comparison with regex
================================================================================

host = /web-\d+/i

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (equality_pattern
          (regex
            (regex_body)
            (regex_flags)))))))

================================================================================
Free text regex
================================================================================

/error|warning/

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (free_text_pattern
        (regex
          (regex_body))))))

================================================================================
Wildcard field presence
================================================================================

host = *

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (field_comparison
        (field_name
          (identifier))
        (equality_pattern
          (anchored_pattern
            (unquoted_pattern)))))))
