tree-sitter-logscale/test/corpus/pipeline.txt
================================================================================
Empty query
================================================================================


--------------------------------------------------------------------------------

(query)

================================================================================
Simple pipeline
================================================================================

error | count()

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (free_text_pattern
        (identifier)))
    (function_call
      (function_name
        (identifier)))))

================================================================================
Multi-step pipeline
================================================================================

error | count() | sort(_count)

--------------------------------------------------------------------------------

(query
  (pipeline
    (filter
      (free_text_pattern
        (identifier)))
    (function_call
      (function_name
        (identifier)))
    (function_call
      (function_name
        (identifier))
      (function_arguments
        (unnamed_function_argument
          (expression
            (identifier)))))))
